Extract LogRecArray.ifind with arbitrary cond
Use the ForN with break lemma to avoid overhead of executing no-op
branch.

--- a/src/Makefile
+++ b/src/Makefile
@@ -32,6 +32,7 @@ EXTRACT_MODULES := Wrappers \
 		ExtractGroupLog \
 		ExtractMemLog \
 		ExtractRecArrayUtils \
+		ExtractLogRecArray \
 		GoExtracted
 EXTRACT_VS 		:= $(EXTRACT_MODULES:%=Extract/%.v)
 EXTRACT_BUILD   := $(patsubst %.v,coqbuild/%.v,$(EXTRACT_VS))
