Move re-spec of optimistic system calls
Includes a syntax for optimistic system call specs (FsSpec and
associated reification fs_spec), and the existing re-spec of
file_get_attr.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ MODULES    := CCLProg CCLMonadLaws CCLHoareTriples CCLPrimitives \
 							SyncRead \
               MemCache WriteBuffer UpdList OptimisticCache \
               SeqSpecs OptimisticTranslator OptimisticFS ConcurCompile \
-		          HomeDirProtocol FSProtocol ConcurrentFS \
+		          HomeDirProtocol FSProtocol OptimisticFSSpecs ConcurrentFS \
 							Lock Nomega Word WordAuto WordZ Bytes Rounding \
 				Mem AsyncDisk Pred Prog ProgMonad PredCrash Hoare \
 				OperationalSemantics \
