Prove a concurrent file copy correct
Doesn't copy any data, but creates a new file and copies over existing
attributes.

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,6 +9,7 @@ MODULES    := CCLProg CCLMonadLaws CCLHoareTriples CCLPrimitives \
               MemCache WriteBuffer UpdList OptimisticCache \
               SeqSpecs OptimisticTranslator OptimisticFS ConcurCompile \
 		          HomeDirProtocol FSProtocol OptimisticFSSpecs ConcurrentFS \
+							ConcurrentCopy \
 							Lock Nomega Word WordAuto WordZ Bytes Rounding \
 				Mem AsyncDisk Pred Prog ProgMonad PredCrash Hoare \
 				OperationalSemantics \
