Implement large-small concurrent microbenchmark
This time entirely in C with pthreads, including deterministic timing
output (large read then small reads).

--- a/bench/concurrent/Makefile
+++ b/bench/concurrent/Makefile
@@ -1,4 +1,4 @@
-all: fsops timeres
+all: fsops timeres large_small
 
 %: %.c
-	gcc -Wall -Werror -O2 $< -o $@
+	gcc -Wall -Werror -O2 -pthread $< -o $@
