Add userspace parallel stat benchmark

--- a/src/Makefile
+++ b/src/Makefile
@@ -68,7 +68,7 @@ OCAMLFUSE	:= ocamlfuse/Fuse.a ocamlfuse/Fuse.cmxa
 
 .PHONY: vio proof clean
 
-all: cfscq fscq mkfs
+all: cfscq fscq mkfs parstat
 
 -include $(OCAMLFUSE_DEP)
 
