Basic sketch of using an operation queue
Idea is to avoid expensive upcalls into Haskell, instead using cheap
"unsafe" downcalls into C to get operations, compute them in Haskell,
and report their results, using many worker threads in Haskell.
Currently only handles stat requests and seems a bit buggy. Lookups are
required for a complete performance tests, since they are used even for
stat() system calls.

--- a/src/Makefile
+++ b/src/Makefile
@@ -105,7 +105,7 @@ ocamlfuse/Fuse.cmxa ocamlfuse/Fuse.a: $(OCAMLFUSE_CMX) ocamlfuse/libFuse_stubs.a
 
 hscgen/%.hs: hslib/%.hsc
 	@mkdir -p $(@D)
-	$(HSC2HS) $< -o $@ --cflag=-D_FILE_OFFSET_BITS=64
+	$(HSC2HS) $< -o $@ --cflag=-D_FILE_OFFSET_BITS=64 -Ihslib
 
 %: %.hs $(VS_HS) $(HSLIB_FUSE) $(HSLIB_POST)
 	test ! -f codegen/Word.hs || mv codegen/Word.hs codegen/.Word.hs
