link with libopfuse

--- a/src/Makefile
+++ b/src/Makefile
@@ -113,7 +113,7 @@ hscgen/%.hs: hslib/%.hsc
 	$(GHC) $(GHCARGS) -Wall $(HSLIB_PRE)
 	$(GHC) $(GHCARGS) -F -pgmF ./fiximports.py codegen/*.hs -ihslib
 	$(GHC) $(GHCARGS) -F -pgmF ./fiximports.py -Wall $(HSLIB_POST) -ihslib -icodegen
-	$(GHC) $(GHCARGS) -F -pgmF ./fiximports.py -Wall $< -ihslib -icodegen -ihscgen -lfuse -o $@
+	$(GHC) $(GHCARGS) -F -pgmF ./fiximports.py -Wall $< -ihslib -icodegen -ihscgen -lfuse -lopfuse -Lhslib -o $@
 
 parstat: parstat.hs $(VS_HS) $(HSLIB_FUSE) $(HSLIB_POST) parallelize.c parallelize.h
 	test ! -f codegen/Word.hs || mv codegen/Word.hs codegen/.Word.hs
@@ -168,6 +168,9 @@ gotest: $(patsubst %.json,%/main.go,$(wildcard codegen/*.json))
 
 hslib/%.o: hslib/%.c
 	$(CC) $^ -c -o $@ -O2 -Wall -Werror -D_FILE_OFFSET_BITS=64
+
+hslib/libopfuse.a: hslib/opqueue.o hslib/opfuse.o
+	ar rcs $@ $^
 
 clean:
 	rm -rf codegen coqbuild _build fstest hstest gotest disk.img \
