Add some more benchmark scripts

--- a/bench/concurrent/Makefile
+++ b/bench/concurrent/Makefile
@@ -1,4 +1,4 @@
-all: fsops timeres large_small parallel_ls
+all: fsops timeres large_small parallel_ls read_file
 
 %: %.c timing.h
 	gcc -Wall -Werror -O2 -pthread $< -o $@
