Checkpoint before changing crashable instructions.
Making instructions other than read, write and sync requires many changes to the crash conditions and proofs and hinder development speed. I will change it to this version when I have more time.

--- a/src/Makefile
+++ b/src/Makefile
@@ -23,8 +23,9 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      ADestructPair DestructVarname\
 	      DirSep DirSepCrash ProgMetatheory TreeSeq \
 	      AtomicCp BACHelper BytefileSpecs \
-	      PermAsyncDisk PermPredCrash\
-	      PermProg PermProgAuto PermSec \
+	      PermAsyncDisk PermPredCrash \
+	      PermProg PermHashmap PermBlockmem \
+		PermProgAuto PermSec \
 	      PermProgMonad PermHoare PermSepAuto \
 	      PermInstr PermCacheDef PermCacheLemmas \
 	      PermCacheSec
