--- a/src/Makefile
+++ b/src/Makefile
@@ -54,7 +54,8 @@ HSLIB_FUSE := hscgen/Fuse.hs hslib/libopfuse.a
 HSLIB_PRE  := hslib/Word.hs hslib/Evict.hs hslib/Profile.hs
 HSLIB_POST := hslib/ShowErrno.hs hscgen/UnixIO.hs hslib/Disk.hs \
 	hslib/Interpreter.hs hslib/ConcurInterp.hs \
-	hslib/FscqFs.hs hslib/CfscqFs.hs
+	hslib/FscqFs.hs hslib/CfscqFs.hs \
+	hslib/Dbench.hs
 
 OCAMLFUSE_ML	:= ocamlfuse/Result.ml \
 		   ocamlfuse/Unix_util.ml \
