--- a/src/Makefile
+++ b/src/Makefile
@@ -72,7 +72,7 @@ OCAMLFUSE	:= ocamlfuse/Fuse.a ocamlfuse/Fuse.cmxa
 
 .PHONY: vio proof clean
 
-all: cfscq fscq mkfs parstat dbench translate
+all: cfscq fscq mkfs parbench dbench translate
 
 -include $(OCAMLFUSE_DEP)
 
