Finish porting BlockPtr

--- a/src/Makefile
+++ b/src/Makefile
@@ -19,7 +19,7 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      PermDiskLogHdr PermDiskLogPadded PermDiskLog \
 	      PermGenSepN PermLogReplay PermMemLog PermDiskSet \
 	      PermGroupLog PermLog PermLogRecArray \
-	      PermBalloc
+	      PermBalloc PermBlockPtr
 
 VS         := $(MODULES:%=%.v)
 VS_BUILD   := $(patsubst %.v,coqbuild/%.v,$(VS))
