Move generic benchmarking out of parbench

--- a/src/Makefile
+++ b/src/Makefile
@@ -56,6 +56,7 @@ HSLIB_POST := hslib/ShowErrno.hs hscgen/UnixIO.hs hslib/Disk.hs \
 	hslib/Timings.hs \
 	hslib/Interpreter.hs hslib/ConcurInterp.hs \
 	hslib/FscqFs.hs hslib/CfscqFs.hs hslib/GenericFs.hs \
+	hslib/Benchmarking.hs \
 	hslib/DbenchScript.hs hslib/DbenchExecute.hs hslib/ParallelSearch.hs
 
 OCAMLFUSE_ML	:= ocamlfuse/Result.ml \
