Correction for Dir
Port up to DirTree

--- a/src/Makefile
+++ b/src/Makefile
@@ -22,7 +22,9 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      PermGroupLog PermLog PermLogRecArray \
 	      PermBalloc PermBlockPtr PermInode \
 	      PermBFile PermBFileCrash PermFileRecArray \
-	      PermDir PermDirName PermDirCache
+	      PermDir PermDirName PermDirCache \
+	      DirTreePath DirTreeDef DirTreePred DirTreeRep \
+	      DirTreeNames DirTreeInodes DirTreeSafe
 
 VS         := $(MODULES:%=%.v)
 VS_BUILD   := $(patsubst %.v,coqbuild/%.v,$(VS))
