Start implementing a native fs FuseOperations

--- a/src/Makefile
+++ b/src/Makefile
@@ -55,7 +55,7 @@ HSLIB_PRE  := hslib/Word.hs hslib/Evict.hs hslib/Profile.hs
 HSLIB_POST := hslib/ShowErrno.hs hscgen/UnixIO.hs hslib/Disk.hs \
 	hslib/Timings.hs \
 	hslib/Interpreter.hs hslib/ConcurInterp.hs \
-	hslib/FscqFs.hs hslib/CfscqFs.hs hslib/GenericFs.hs \
+	hslib/FscqFs.hs hslib/CfscqFs.hs hslib/GenericFs.hs hslib/NativeFs.hs \
 	hslib/Benchmarking.hs \
 	hslib/DbenchScript.hs hslib/DbenchExecute.hs hslib/ParallelSearch.hs \
 	hslib/MailServer.hs
