--- a/src/Makefile
+++ b/src/Makefile
@@ -75,7 +75,7 @@ OCAMLFUSE	:= ocamlfuse/Fuse.a ocamlfuse/Fuse.cmxa
 
 .PHONY: vio proof clean
 
-all: cfscq fscq mkfs parbench fusesearch mailserver diskread translate hslib/dbench_spec
+all: cfscq fscq mkfs parbench fusebench mailserver diskread translate hslib/dbench_spec
 
 -include $(OCAMLFUSE_DEP)
 
