fix up Interpreter.hs
enough runtime for mkfs

still need to fix up fscq.hs

--- a/src/Makefile
+++ b/src/Makefile
@@ -65,8 +65,8 @@ OCAMLFUSE	:= ocamlfuse/Fuse.a ocamlfuse/Fuse.cmxa
 
 .PHONY: coq proof clean
 
-# all: fscq mkfs
-all: coq
+# all: coq fscq mkfs
+all: coq mkfs
 
 -include $(OCAMLFUSE_DEP)
 
