--- a/src/Makefile
+++ b/src/Makefile
@@ -26,7 +26,8 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      DirTreePath DirTreeDef DirTreePred DirTreeRep \
 	      DirTreeNames DirTreeInodes DirTreeSafe DirTree \
 	      TreeCrash DirSep DirSepCrash TreeUtils SuperBlock \
-	      AsyncFS AsyncFSDiskSec
+	      AsyncFS AsyncFSProg \
+	      AsyncFSDiskSecAttacker AsyncFSDiskSecVictim
 
 VS         := $(MODULES:%=%.v)
 VS_BUILD   := $(patsubst %.v,coqbuild/%.v,$(VS))
