Make changes for only_public_operations corr2
I fixed instruction layer. This will break some proofs. Definitely read and write in AsyncFS. There is no easy way to detect them except nightly proof checker. I will fix them after I receive the report.

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,7 +13,7 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      Array RecArrayUtils AsyncRecArray \
 	      Prog Hashmap Blockmem \
 	      ProgAuto Sec \
-	      ProgMonad Hoare SepAuto \
+	      ProgMonad Hoare HoareWeak SepAuto \
 	      MemPred \
 	      Instr ProgLoop ProgList \
               CacheDef CacheLemmas CacheSec CacheRangeSec \
