--- a/src/Makefile
+++ b/src/Makefile
@@ -27,7 +27,7 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      DirTreeNames DirTreeInodes DirTreeSafe DirTree \
 	      TreeCrash DirSep DirSepCrash TreeUtils SuperBlock \
 	      AsyncFS AsyncFSProg \
-	      AsyncFSDiskSecAttacker AsyncFSDiskSecVictim
+	      DiskSecDef DiskSecAttacker DiskSecVictim
 
 VS         := $(MODULES:%=%.v)
 VS_BUILD   := $(patsubst %.v,coqbuild/%.v,$(VS))
