Prove exact theorem statements in the paper.

--- a/src/Makefile
+++ b/src/Makefile
@@ -27,7 +27,8 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      DirTreeNames DirTreeInodes DirTreeSafe DirTree \
 	      TreeCrash DirSep DirSepCrash TreeUtils SuperBlock \
 	      AsyncFS AsyncFSProg \
-	      DiskSecDef DiskSecAttacker DiskSecVictim
+	      DiskSecDef DiskSecAttacker DiskSecVictim \
+	      PaperTheorems CopyFile
 
 VS         := $(MODULES:%=%.v)
 VS_BUILD   := $(patsubst %.v,coqbuild/%.v,$(VS))
