Fix some top level theorems

--- a/src/Makefile
+++ b/src/Makefile
@@ -27,7 +27,7 @@ MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 	      DirTreeNames DirTreeInodes DirTreeSafe DirTree \
 	      TreeCrash DirSep DirSepCrash TreeUtils SuperBlock \
 	      WeakConversion AsyncFS \
-	      #DiskSecDef DiskSecAttacker DiskSecVictim \
+	      DiskSecDef DiskSecAttacker #DiskSecVictim \
 	      #PaperTheorems CopyFile
 
 VS         := $(MODULES:%=%.v)
